# sbpf

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
crates/assembler/: Cargo.toml
crates/assembler/src/: astnode.rs  debuginfo.rs  dynsym.rs  errors.rs  header.rs  instruction_verifier.rs  lexer.rs  lib.rs  macros.rs  messages.rs  opcode.rs  parser.rs  program.rs  section.rs  tokenizer.rs  utils.rs
example/: .gitignore  README.md  build.sh  package.json  tsconfig.json
example/src/example/: example.ld
src/: config.rs  defaults.rs  main.rs
src/commands/: build.rs  clean.rs  common.rs  defaults.rs  deploy.rs  disassemble.rs  init.rs  light_build.rs  mod.rs  test.rs
test/: README.md  package.json
test/src/test/: test.s
test/tests/: test.test.ts
tests/: test_memo.rs  utils.rs
