[package]
name = "sbpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
crossterm = "0.28.1"
serde_json = "1.0.122"
solana-sdk = "2.0.4"
thiserror = "1.0.63"
