[package]
name = "sbpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
crossterm = "0.28.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde_json = "1.0.122"
thiserror = "1.0.63"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dirs = "4.0" # For easily getting the home directory
solana_rbpf = "0.8.5"
