[package]
name                   = "sbpf-assembler"
description            = "SBPF Assembler"
edition 			   = "2024"
version.workspace      = true

[dependencies]
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
codespan-reporting = { workspace = true }
termcolor = "1.4"
